# jni-bindgen

./: .gitignore  Cargo.toml  README.md  jitpack.yml
.github/workflows/: test.yml
JNIBindgen/: build.gradle  settings.gradle
JNIBindgen/src/main/java/com/github/markusjx/jnibindgen/: NativeClass.java  NativeClassImpl.java  NativeDrop.java  NativeExecutionException.java
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/jni-bindgen/: Cargo.toml
crates/jni-bindgen-macros/: Cargo.toml
crates/jni-bindgen-macros/src/: lib.rs
crates/jni-bindgen-macros/src/codegen/: code.rs  java_class.rs  java_interface.rs  java_method.rs  java_type.rs  mod.rs  traits.rs
crates/jni-bindgen-macros/src/util/: attrs.rs  expand.rs  method.rs  mod.rs  quotes.rs  traits.rs
crates/jni-bindgen/src/: lib.rs
crates/jni-bindgen/src/conversion/: class_convert.rs  mod.rs  object_convert.rs  option_convert.rs  traits.rs
crates/jni-bindgen/src/errors/: jni_error.rs  mod.rs  result.rs
crates/jni-bindgen/src/objects/: mod.rs  traits.rs  wrapped.rs
examples/ExampleModule/: .gitignore  build.gradle  settings.gradle
examples/ExampleModule/gradle/wrapper/: gradle-wrapper.properties
examples/ExampleModule/src/main/java/com/github/markusjx/example/: Main.java
examples/ExampleModule/src/test/java/com/github/markusjx/example/: TestInterface.java  TestNativeStruct.java  TestRustStruct.java
examples/example-lib/: Cargo.toml
examples/example-lib/src/: lib.rs
examples/example-lib/src/structs/: interface.rs
java/JNIBindgen/gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
